# shivarthu

./: .gitignore  Cargo.toml  Containerfile  README.md  chain_spec.json  notes  notes2  raw_chain_spec.json
.github/workflows/: check.yml
.helix/: config.toml
container-chains/nodes/simple/: Cargo.toml
container-chains/runtime-templates/simple/: Cargo.toml  rustc-ice-2024-05-26T13_06_00-128722.txt  rustc-ice-2024-05-26T13_06_14-128872.txt  rustc-ice-2024-05-26T13_07_54-129055.txt  rustc-ice-2024-05-26T13_08_53-129174.txt  rustc-ice-2024-05-26T13_11_44-129588.txt  rustc-ice-2024-05-26T13_11_57-129706.txt
custom-pallets/anonymous-account/: Cargo.toml
custom-pallets/anonymous-account/src/: extras.rs  lib.rs  mock.rs  tests.rs
custom-pallets/approval-voting/: Cargo.toml
custom-pallets/approval-voting-template/: Cargo.toml
custom-pallets/approval-voting-template/src/: tests.rs
custom-pallets/approval-voting/src/: lib.rs  tests.rs
custom-pallets/conviction-approve/: Cargo.toml
custom-pallets/conviction-approve/src/: conviction.rs  ia.txt  lib.rs  mock.rs  tests.rs  traits.rs  types.rs
custom-pallets/conviction-voting/: Cargo.toml
custom-pallets/create-department/: Cargo.toml
custom-pallets/create-department/src/: extras.rs  lib.rs  mock.rs  tests.rs  types.rs
custom-pallets/department-funding/: Cargo.toml
custom-pallets/department-funding/department-funding-rpc/: Cargo.toml
custom-pallets/department-funding/department-funding-rpc/src/: lib.rs
custom-pallets/department-funding/department-funding-runtime-api/: Cargo.toml
custom-pallets/department-funding/department-funding-runtime-api/src/: lib.rs
custom-pallets/department-funding/src/: benchmarking.rs  extras.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
custom-pallets/departments/: Cargo.toml
custom-pallets/departments/src/: extras.rs  lib.rs  mock.rs  tests.rs
custom-pallets/election/: Cargo.toml
custom-pallets/election/election-rpc/: Cargo.toml
custom-pallets/election/election-runtime-api/: Cargo.toml
custom-pallets/election/src/: extras.rs  lib.rs  tests.rs
custom-pallets/first-past-the-post/: Cargo.toml
custom-pallets/first-past-the-post/src/: lib.rs
custom-pallets/funding/: Cargo.toml
custom-pallets/funding/src/: lib.rs  mock.rs  types.rs
custom-pallets/positive-externality/: Cargo.toml
custom-pallets/positive-externality/positive-externality-rpc/: Cargo.toml
custom-pallets/positive-externality/positive-externality-rpc/src/: lib.rs
custom-pallets/positive-externality/positive-externality-runtime-api/: Cargo.toml
custom-pallets/positive-externality/src/: benchmarking.rs  extras.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
custom-pallets/profile-validation/: Cargo.toml
custom-pallets/profile-validation/profile-validation-rpc/: Cargo.toml
custom-pallets/profile-validation/profile-validation-runtime-api/: Cargo.toml
custom-pallets/profile-validation/profile-validation-runtime-api/src/: lib.rs
custom-pallets/profile-validation/src/: extras.rs  lib.rs  mock.rs  permissions.rs  tests.rs  types.rs
custom-pallets/project-approve/: Cargo.toml
custom-pallets/project-tips/: Cargo.toml
custom-pallets/project-tips/project-tips-rpc/: Cargo.toml
custom-pallets/project-tips/project-tips-runtime-api/: Cargo.toml
custom-pallets/project-tips/src/: benchmarking.rs  extras.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
custom-pallets/schelling-game-shared/: Cargo.toml
custom-pallets/schelling-game-shared/src/: extras.rs  functions.rs  lib.rs  mock.rs  score_game.rs  share_link.rs  tests.rs  types.rs
custom-pallets/score-voting/: Cargo.toml
custom-pallets/score-voting/src/: lib.rs  mock.rs  tests.rs  types.rs
custom-pallets/shared-storage/: Cargo.toml
custom-pallets/shared-storage/src/: extras.rs  lib.rs  mock.rs  tests.rs  types.rs
custom-pallets/simple-approval-voting/: Cargo.toml
custom-pallets/simple-approval-voting/src/: lib.rs  mock.rs
custom-pallets/sortition-sum-game/: Cargo.toml
custom-pallets/sortition-sum-game/src/: extras.rs  lib.rs  mock.rs  tests.rs  types.rs
custom-pallets/spaces/: Cargo.toml
custom-pallets/spaces/src/: extras.rs  lib.rs  mock.rs  types.rs
custom-pallets/support/: Cargo.toml
custom-pallets/support/src/: lib.rs
custom-pallets/template/: Cargo.toml
custom-pallets/zkp-anonymous-account/: docs.md
custom-pallets/zkp-anonymous-account/host/: Cargo.toml
custom-pallets/zkp-anonymous-account/host/src/: accounts_hash.rs  main.rs
docs/: new_code.md  reputation.typ  schelling_game_and_conviction.typ  shivarthu-story-odia.typ  shivarthu-story.typ
docs/kyc/: kyc.typ
docs/shivarthu/: Shivarthu.md  effectiveness_schelling_game.md
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/department-funding/department-funding-rpc/: Cargo.toml
pallets/department-funding/department-funding-runtime-api/: Cargo.toml
pallets/department-funding/src/: extras.rs  lib.rs  mock.rs  types.rs
pallets/election/src/: mock.rs
pallets/positive-externality/: Cargo.toml
pallets/positive-externality-validation/src/: tests.rs
pallets/positive-externality/positive-externality-rpc/: Cargo.toml
pallets/positive-externality/positive-externality-runtime-api/: Cargo.toml
pallets/positive-externality/src/: extras.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/posts/src/: extras.rs  functions.rs  mock.rs  tests.rs  types.rs
pallets/profile-validation/profile-validation-rpc/: Cargo.toml
pallets/profile-validation/profile-validation-runtime-api/: Cargo.toml
pallets/profile-validation/src/: extras.rs  lib.rs  mock.rs  (+1 more)
pallets/template/: Cargo.toml
runtime/: Cargo.toml  rustc-ice-2024-08-08T15_59_27-28771.txt
runtime/node-runtime/: Cargo.toml
runtime/node-runtime/src/: lib.rs
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
traits/trait-departments/: Cargo.toml
traits/trait-schelling-game-shared/: Cargo.toml
traits/trait-shared-storage/: Cargo.toml
traits/trait-shared-storage/src/: lib.rs
traits/trait-sortition-sum-game/: Cargo.toml
(+53 files in other folders)
