[workspace.package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
license = "MIT-0"
homepage = "https://substrate.io"

[workspace]
members = [
    "node",
    "pallets/template",
    "custom-pallets/department-funding",
	"custom-pallets/positive-externality",
	"custom-pallets/profile-validation",
	"custom-pallets/project-tips",
	"custom-pallets/schelling-game-shared",
	"custom-pallets/shared-storage",
	"custom-pallets/sortition-sum-game",
	"custom-pallets/spaces",
	"custom-pallets/support",
    "runtime",
]
resolver = "2"
[profile.release]
panic = "unwind"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic


[workspace.dependencies]
## New start

## New pallets
pallet-template = { path = "custom-pallets/template", default-features = false }
pallet-support = { path = "custom-pallets/support", default-features = false }
pallet-spaces = { path = "custom-pallets/spaces", default-features = false }
pallet-sortition-sum-game = { path = "custom-pallets/sortition-sum-game", default-features = false }
pallet-shared-storage = { path = "custom-pallets/shared-storage", default-features = false }
pallet-schelling-game-shared = { path = "custom-pallets/schelling-game-shared", default-features = false }
pallet-profile-validation = { path = "custom-pallets/profile-validation", default-features = false }
pallet-project-tips = { path = "custom-pallets/project-tips", default-features = false }
pallet-positive-externality = { path = "custom-pallets/positive-externality", default-features = false }
pallet-department-funding = { path = "custom-pallets/department-funding", default-features = false }

## Traits
trait-sortition-sum-game = { path = "traits/trait-sortition-sum-game", default-features = false }
trait-shared-storage = { path = "traits/trait-shared-storage", default-features = false }
trait-schelling-game-shared = { path = "traits/trait-schelling-game-shared", default-features = false }

## Api
profile-validation-runtime-api = { path = "custom-pallets/profile-validation/profile-validation-runtime-api", default-features = false }
project-tips-runtime-api = { path = "custom-pallets/project-tips/project-tips-runtime-api", default-features = false }
positive-externality-runtime-api = { path = "custom-pallets/positive-externality/positive-externality-runtime-api", default-features = false }
department-funding-runtime-api = { path = "custom-pallets/department-funding/department-funding-runtime-api", default-features = false }


## Rpc
profile-validation-rpc = { path = "custom-pallets/profile-validation/profile-validation-rpc", default-features = false }
project-tips-rpc = { path = "custom-pallets/project-tips/project-tips-rpc", default-features = false }
positive-externality-rpc = { path = "custom-pallets/positive-externality/positive-externality-rpc", default-features = false }
department-funding-rpc = { path = "custom-pallets/department-funding/department-funding-rpc", default-features = false }


## Additional dependancies
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
num-integer = { default-features = false, version = "0.1.44" }
frame-support-test = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
log = { version = "0.4.17", default-features = false }
jsonrpsee = { version = "0.22", features = ["client-core", "macros", "server"] }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-blockchain = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false  }
hex-literal = { version= " 0.4.1" }
## New end

parity-scale-codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }

# frame deps
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}

sp-core = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false}
sp-runtime = {  git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
