[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
    "custom-pallets/schelling-game-shared",
    "custom-pallets/shared-storage",
    "custom-pallets/sortition-sum-game",
    "custom-pallets/spaces",
    "custom-pallets/support",
    "custom-pallets/positive-externality",
    "custom-pallets/approval-voting",
    # "custom-pallets/conviction-voting",
    "custom-pallets/profile-validation",
    "custom-pallets/conviction-approve",
    "custom-pallets/score-voting",
]
resolver = "2"

[workspace.dependencies]

solochain-template-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
pallet-conviction-voting = { version = "40.1.0", default-features = false }

pallet-support = { path = "custom-pallets/support", default-features = false }
pallet-spaces = { path = "custom-pallets/spaces", default-features = false }
pallet-sortition-sum-game = { path = "custom-pallets/sortition-sum-game", default-features = false }
pallet-shared-storage = { path = "custom-pallets/shared-storage", default-features = false }
pallet-schelling-game-shared = { path = "custom-pallets/schelling-game-shared", default-features = false }
pallet-positive-externality = { path = "custom-pallets/positive-externality", default-features = false }
pallet-approval-voting = { path = "custom-pallets/approval-voting", default-features = false }
# pallet-conviction-voting = { path = "custom-pallets/conviction-voting", default-features = false }
pallet-profile-validation = { path = "custom-pallets/profile-validation", default-features = false }

pallet-conviction-approve = { path = "custom-pallets/conviction-approve", default-features = false }

## Traits
trait-sortition-sum-game = { path = "traits/trait-sortition-sum-game", default-features = false }
trait-shared-storage = { path = "traits/trait-shared-storage", default-features = false }
trait-schelling-game-shared = { path = "traits/trait-schelling-game-shared", default-features = false }
trait-departments = { path = "traits/trait-departments", default-features = false }


## Api
positive-externality-runtime-api = { path = "custom-pallets/positive-externality/positive-externality-runtime-api", default-features = false }
profile-validation-runtime-api = { path = "custom-pallets/profile-validation/profile-validation-runtime-api", default-features = false }


## Rpc
positive-externality-rpc = { path = "custom-pallets/positive-externality/positive-externality-rpc", default-features = false }
profile-validation-rpc = { path = "custom-pallets/profile-validation/profile-validation-rpc", default-features = false }

## Others
sc-rpc = "43.0.0"
# risc0-zkvm = { version = "2.0.1", default-features = false }

### Additional Dependencies
num-integer = { default-features = false, version = "0.1.46" }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
pallet-insecure-randomness-collective-flip = { default-features = false, version = "27.0.0" }
sp-arithmetic = { default-features = false, version = "26.0.0" }
hex-literal = { version = " 0.4.1" }
serde = { version = "1.0.218" }
assert_matches = { version = "1.5.0" }
sp-std = { version = "14.0.0", default-features = false }
pallet-scheduler = { version = "41.0.0", default-features = false }
pallet-referenda = { version = "40.1.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { version = "46.1.0", default-features = false }
frame-metadata-hash-extension = { version = "0.7.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { version = "39.1.0", default-features = false }
pallet-transaction-payment-rpc = { version = "42.0.0", default-features = false }
sc-basic-authorship = { version = "0.48.0", default-features = false }
sc-cli = { version = "0.50.1", default-features = false }
sc-client-api = { version = "38.0.0", default-features = false }
sc-consensus = { version = "0.47.0", default-features = false }
sc-consensus-aura = { version = "0.48.0", default-features = false }
sc-consensus-grandpa = { version = "0.33.0", default-features = false }
sc-executor = { version = "0.41.0", default-features = false }
sc-network = { version = "0.48.3", default-features = false }
sc-offchain = { version = "43.0.0", default-features = false }
sc-service = { version = "0.49.0", default-features = false }
sc-telemetry = { version = "28.0.0", default-features = false }
sc-transaction-pool = { version = "38.1.0", default-features = false }
sc-transaction-pool-api = { version = "38.1.0", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-api = { version = "35.0.0", default-features = false }
sp-block-builder = { version = "35.0.0", default-features = false }
sp-blockchain = { version = "38.0.0", default-features = false }
sp-consensus-aura = { version = "0.41.0", default-features = false }
sp-consensus-grandpa = { version = "22.0.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
sp-inherents = { version = "35.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-keyring = { version = "40.0.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false }
sp-timestamp = { version = "35.0.0", default-features = false }
substrate-frame-rpc-system = { version = "42.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "39.0.0", default-features = false }
frame-executive = { version = "39.1.0", default-features = false }
frame-support = { version = "39.1.0", default-features = false }
frame-system-benchmarking = { version = "39.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "35.0.0", default-features = false }
frame-try-runtime = { version = "0.45.0", default-features = false }
pallet-aura = { version = "38.1.0", default-features = false }
pallet-balances = { version = "40.1.0", default-features = false }
pallet-grandpa = { version = "39.1.0", default-features = false }
pallet-sudo = { version = "39.0.0", default-features = false }
pallet-timestamp = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "39.0.0", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
sp-offchain = { version = "35.0.0", default-features = false }
sp-session = { version = "37.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "35.0.0", default-features = false }
sp-version = { version = "38.0.0", default-features = false }
substrate-wasm-builder = { version = "25.0.0", default-features = false }
