[package]
name = "pallet-department-funding"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true , optional = true}
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true}
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
pallet-support = { workspace = true  }
pallet-shared-storage = { workspace = true }
trait-shared-storage = { workspace = true }
pallet-schelling-game-shared = { workspace = true }
trait-schelling-game-shared = { workspace = true }
pallet-sortition-sum-game = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
frame-support-test = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-timestamp/std",
	"pallet-balances/std",
	"pallet-support/std",
	"pallet-shared-storage/std",
	"pallet-schelling-game-shared/std",
	"pallet-sortition-sum-game/std",
	"frame-support-test/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
