[package]
name = "pallet-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-balances = { workspace = true }
sp-io = { workspace = true }
log = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true}
sp-arithmetic = { workspace = true }
pallet-timestamp = { workspace = true }
strum = { workspace = true }


[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-balances/std",
	"log/std",
    "sp-runtime/std",
	"sp-std/std",
    "sp-arithmetic/std",
    "strum/std", 
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
