[package]
name = "trait-shared-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
frame-support = { workspace = true}



[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
]
