[package]
name = "election-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
jsonrpc-core = {version = "18.0.0", features = ["arbitrary_precision"]}
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
sc-rpc = { workspace = true }
sp-api = { workspace = true }
sp-blockchain ={ workspace = true }
sp-runtime = { workspace = true }

election-runtime-api ={ path="../election-runtime-api", default-features = false}


[features]
default = ["std"]
std = [
  "sp-api/std",
  "sp-runtime/std",
  "election-runtime-api/std"
]

