[package]
name = "profile-validation-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
sp-api = { workspace = true }
frame-support = { workspace = true }
sp-std = { workspace = true}

[features]
default = ["std"]
std = [
	"sp-api/std",
	"frame-support/std",
	"sp-std/std",
]